[package]
authors      = ["Tony <repositony@outlook.com>"]
edition      = "2024"
license      = "GPL-3.0 license"
name         = "multiplayer_bot"
repository   = "https://github.com/repositony/multiplayer_bot"
rust-version = "1.85"
version      = "0.12.0"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "collector",
    "gateway",
    "model",
    "rustls_backend",
] }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

minreq = { version = "2.13.2", features = ["https-rustls"] }
